--- a/composer.json
+++ b/composer.json
@@ -21,12 +21,12 @@
     "require": {
         "php": ">=5.5.9",
         "ext-zip": "*",
-        "illuminate/config": ">=5.1.0",
-        "illuminate/console": ">=5.1.0",
-        "illuminate/database": ">=5.1.0",
-        "illuminate/filesystem": ">=5.1.0",
-        "illuminate/support": ">=5.1.0",
-        "symfony/process": "2.8.*|3.1.*"
+        "illuminate/config": ">=5.4.0",
+        "illuminate/console": ">=5.4.0",
+        "illuminate/database": ">=5.4.0",
+        "illuminate/filesystem": ">=5.4.0",
+        "illuminate/support": ">=5.4.0",
+        "symfony/process": "3.2.*"
     },
     "require-dev": {
         "mockery/mockery": "~0.9.2",
